@@ -2,6 +2,17 @@ Version history: 0.73
  * Improved autorebuilder process.  Now the module's build directory won't be
    unnecessarily cleaned.
  * Added new configuration file option make-install-prefix.
+ * Added exception handling to the main loop.  You should never again have the
+   script crash and then have it complain that it's still running.
+ * The build process now outputs to a file called build-status in the log
+   directory for that run, which reports on the success/failure of each build
+   attempt.
+ * Fix a bug with use-qt-builddir-hack that caused it to affect all modules
+   during the build system setup instead of just qt-copy.
+ * Don't add 'global' to the log directory path if we're getting the global
+   log directory.
+ * Script now informs you of your log directory at the end of the script run.
+ * Fix infinite loop when you've disable automatic module install.
 
 Version history: 0.72
  * qt-copy bugfix #6564: There's no reason to try to download the admin dir
